crates/nash-solve/tests/snapshots/inference__user_boolean_constructor_names_are_not_literals.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype flag = True | False\ntruth = True\nfalsehood = False\n"
---
falsehood : flag
truth : flag
