crates/nash-solve/tests/snapshots/inference__user_twins_Main.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Status exposing (..)\ntype Status = Ready | Waiting\ntype status = Ready | Waiting\ntype payload 'a = Payload int 'a\ntype Payload 'a = Payload Int 'a\nsmallPayload x y = Payload x y\nbigPayload x y = Status.Payload x y\nreadSmall (Payload x y) = (x, y)\nreadBig (Status.Payload x y) = (x, y)\nlittle = Ready\nbig = Status.Ready\nlocalLittle x = case x of\n    Ready -> ()\n    Waiting -> ()\nlocalBig x = case x of\n    Status.Ready -> ()\n    Status.Waiting -> ()\n\n\nmodule Main exposing (..)\nimport Status as S exposing (..)\nsmallPayload x y = Payload x y\nbigPayload x y = S.Payload x y\nreadSmall (Payload x y) = (x, y)\nreadBig (S.Payload x y) = (x, y)\nlittleUse = Ready\nbigUse = S.Ready\nlittlePattern x = case x of\n    Ready -> ()\n    Waiting -> ()\nbigPattern x = case x of\n    S.Ready -> ()\n    S.Waiting -> ()\n"
---
bigPattern : forall a. FromUnit a => Status -> a
bigPayload : forall a. Big a => Int -> a -> Payload a
bigUse : Status
littlePattern : forall a. FromUnit a => status -> a
littleUse : status
readBig : forall a. Big a => Payload a -> ( Int, a )
readSmall : forall a. payload a -> ( int, a )
smallPayload : forall a. int -> a -> payload a
