crates/nash-solve/tests/snapshots/inference__user_twins_Status.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Status exposing (..)\ntype Status = Ready | Waiting\ntype status = Ready | Waiting\ntype payload 'a = Payload int 'a\ntype Payload 'a = Payload Int 'a\nsmallPayload x y = Payload x y\nbigPayload x y = Status.Payload x y\nreadSmall (Payload x y) = (x, y)\nreadBig (Status.Payload x y) = (x, y)\nlittle = Ready\nbig = Status.Ready\nlocalLittle x = case x of\n    Ready -> ()\n    Waiting -> ()\nlocalBig x = case x of\n    Status.Ready -> ()\n    Status.Waiting -> ()\n"
---
big : Status
bigPayload : forall a. Big a => Int -> a -> Payload a
little : status
localBig : forall a. FromUnit a => Status -> a
localLittle : forall a. FromUnit a => status -> a
readBig : forall a. Big a => Payload a -> ( Int, a )
readSmall : forall a. payload a -> ( int, a )
smallPayload : forall a. int -> a -> payload a
